# flowstate

./: .gitignore  Cargo.toml  LICENSE  Software Requirements Document.md  config.yaml  imgui.ini  personal_database.yaml  post-nokia-database.yaml  pre-nokia-database.yaml  template_database.yaml
src/: app.rs  flowstate.rs  gui.rs  gui_deprecated.rs  lib.rs  main.rs
src/app/: alloc_cursor.rs  command.rs  flow_state.rs  flow_state_cache.rs  mod.rs  model.rs  project.rs  task_inspection.rs
src/app_next/: alloc_cursor.rs  command.rs  duration.rs  flow_state.rs  flow_state_cache.rs  ids.rs  mod.rs  model.rs  project.rs  task_inspection.rs
src/flowstate/: cache.rs  commands.rs  mod.rs  persistence.rs  state.rs  tests.rs  types.rs
src/flowstate_deprecated/: cache.rs  commands.rs  state.rs  tests.rs  types.rs
src/gui/: config.rs  constants.rs  gantt_chart.rs  gantt_chart_resources.rs  gantt_chart_tasks.rs  gui.rs  inspection.rs  inspection_resource.rs  inspection_task.rs  menu_bar.rs  mod.rs  ribbon.rs  tab_bar.rs  utils.rs
src/support/: mod.rs
