[package]
name = "flowstate"
version = "0.1.2"
edition = "2021"
description = "An application to track team progress"
repository = "https://github.com/bengimizrahi/FlowState.git"
license = "MIT OR Apache-2.0"

# Primary crate root for all modules; thin `src/main.rs` is the `flowstate` binary.
[lib]
name = "flowstate"
path = "src/lib.rs"

[dependencies]
glium = { version = "0.35.0", default-features = true }
image = "0.23"

imgui-glium-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glium-renderer" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs", version = "0.12", features = [
    "tables-api",
] }
imgui-winit-support = { version = "0.13", git = "https://github.com/imgui-rs/imgui-winit-support" }
copypasta = "0.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = { version = "0.4.41", features = ["serde"] }
webbrowser = "1.0.5"
rfd = "0.15"
